Add banner image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>    
+  <head>
+    <img src="./src/assets/OnBoarding.png" alt="Notice Board" >
     <h1>OnBoarding App</h1>
   </head>
   <body>
