Added a crude list of notices and add / remove notice buttons

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <img src="./src/assets/OnBoarding.png" alt="Notice Board" >
-    <h1>OnBoarding App</h1>
+    
   </head>
   <body>
+   
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
